Add session-configuration file support; change media types   * The session-configuration file support provides a dialog box     and a file format for saving and restoring command-line options.     The media types are now application/vnd.bzdev.epts-state+xml     and application/vnd.bzdev.epts-config+zip. A new icon was     added and an existing one was changed to help distinguish between     the two file EPTS-specific file formats.